--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,14 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+
+
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+
+    --foreground: #000000;
   }
 }
 
@@ -24,3 +17,18 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+button{
+  /* border: #000000 solid 1px; */
+  border-radius: 8px;
+  padding: 7px 10px;
+
+}
+/* .insert-button{
+  font-size: 1.2rem;
+  background-color: rgb(1, 185, 50);
+  cursor: pointer;
+  transition: all 2s ease;
+}
+.insert-button:hover{
+  background-color: rgb(1, 185, 60);
+} */
